== Version History ==

x.x:

1.0.0 ():
 - upgrade for 1.9+

0.5 ():
 - fix sending results for *everything* when no options selected
 - add support for graphing annotations

0.4 ():
 - Moved timeline back into admin context (requires Elgg 1.8.7)
 - Set default start date to 6 months ago, or site creation date if site is less than 6 months old
 - Added page-view tracking
 - Organized language strings better in preparation for new sections
 - Moved timeline and pageview output to ajax loaded content
 - batch processing timeline data and most pageview data to minimize OOM errors
 - added 10 min timeout on processing requests, no more wondering if that spinner means anything :)


0.3 (06/08/2012):

 - Initial Release: timeline functions