@@ -6,3 +6,5 @@ $version = elgg_get_plugin_setting('version', PLUGIN_ID);
 if (!$version) {
 	elgg_set_plugin_setting('version', PLUGIN_VERSION, PLUGIN_ID);
 }
+
+install_pageview_table();
